Added about and autostart layout

--- a/index.html
+++ b/index.html
@@ -61,6 +61,33 @@
               <input type="submit" value="Save" class="w-1/4 mt-3 bg-white p-1 rounded-md focus:outline outline-white outline-2 outline-offset-2 text-app-light-gray font-bold text-lg hover:bg-green-700 hover:text-white duration-150">
             </div>
           </form>
+
+          <div class="w-full mt-[50px] mb-[30px]">
+            <hr class="border-t-2 border-white">
+          </div>
+
+          <label class="label cursor-pointer">
+            <span class="text-[24px] font-montserrat text-white font-bold">Autostart ?</span> 
+            <input type="checkbox" class="checkbox" data-action="input->settings#toggleAutostart" />
+          </label>
+
+          <div class="w-full mt-[30px] mb-[50px]">
+            <hr class="border-t-2 border-white">
+          </div>
+
+          <div>
+            <p class="text-[24px] text-white">
+              <span class="font-bold">About</span> <br><br>
+
+              Sikontrol 1.0.0 <br>
+              Licence GPLv3 <br><br>
+
+              Author: <a href="https://github.com/sikelio" target="_blank">Sikelio</a> <br><br>
+
+              Website: <a href="https://github.com/sikelio/sikontrol" target="_blank">https://github.com/sikelio/sikontrol</a> <br>
+              Support url: <a href="https://github.com/sikelio/sikontrol/issues" target="_blank">https://github.com/sikelio/sikontrol/issues</a>
+            </p>
+          </div>
         </div>
       </div>
     </div>
