Added storing method to save socket config

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
               <br>
 
               <span class="text-[20px] text-white">
-                Port: <span>undefined</span>
+                Port: <span data-app-target="port"></span>
               </span>
 
               <br>
 
               <span class="text-[20px] text-white">
-                Token: <span>undefined</span>
+                Token: <span data-app-target="token"></span>
               </span>
             </div>
 
