Added form submit alert

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
 
         <div data-main-target="page" data-controller="settings" class="w-full h-full hidden">
-          <form data-action="submit->settings#saveSettings">
+          <form data-action="submit->settings#saveSettings" data-settings-target="socketform">
             <div>
               <label for="port" class="text-[24px] text-white font-bold">
                 Port <br>
