Implemented autostart options

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
           <label class="label cursor-pointer">
             <span class="text-[24px] font-montserrat text-white font-bold">Autostart ?</span> 
-            <input type="checkbox" class="checkbox" data-action="input->settings#toggleAutostart" />
+            <input type="checkbox" class="checkbox" data-action="input->settings#toggleAutostart" data-settings-target="autostartcheck" />
           </label>
 
           <div class="w-full mt-[30px] mb-[30px]">
