Added helpers display

--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
               <br>
 
               <ul class="text-[16px] text-white" data-credits-target="cargolibs"></ul>
+
+              <br>
+
+              <span class="text-[20px] text-white font-bold flex justify-center">With the help of</span>
+
+              <ul class="text-[16px] text-white" data-credits-target="helpers"></ul>
             </div>
           </div>
         </div>
