Improved helpers display

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
               <span class="text-[20px] text-white font-bold flex justify-center">With the help of</span>
 
-              <ul class="text-[16px] text-white" data-credits-target="helpers"></ul>
+              <div class="flex space-x-2 overflow-hidden p-3" data-credits-target="helpers"></div>
             </div>
           </div>
         </div>
