Added events for login / logout of clients

--- a/index.html
+++ b/index.html
@@ -84,11 +84,7 @@
 
               <br>
 
-              <ul class="text-[20px] text-white" data-main-target="devices">
-                <li>
-                  <span>- Pixel 8 | xxx.xxx.xxx.xxx | xx:xx:xx:xx:xx:xx</span>
-                </li>
-              </ul>
+              <ul class="text-[20px] text-white" data-app-target="devices"></ul>
             </div>
           </div>
         </div>
