Added icons in the sidebar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div class="flex h-screen select-none">
       <div class="w-[300px] flex flex-col bg-app-dark-gray">
         <div class="flex flex-col p-[25px]">
-          <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 active">App</button>
+          <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 active">
+            <i class="fa-solid fa-house"></i>
+            App
+          </button>
         </div>
 
         <div class="flex-grow"></div>
@@ -23,8 +26,15 @@
         </div>
 
         <div class="flex flex-col p-[25px]">
-          <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 nonactive mb-[25px]">Credits</button>
-          <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 nonactive">Settings</button>
+          <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 nonactive mb-[25px]">
+            <i class="fa-solid fa-copyright"></i>
+            Credits
+          </button>
+
+          <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 nonactive">
+            <i class="fa-solid fa-gear"></i>
+            Settings
+          </button>
         </div>
       </div>
 
@@ -72,7 +82,7 @@
                 </button>
   
                 <button data-action="click->app#stopServer" data-app-target="stopbtn" disabled class="ml-2 flex items-center gap-2 px-4 py-2 text-white bg-app-dark-gray rounded-lg duration-150 hover:bg-white hover:text-app-dark-gray active:bg-app-dark-gray disabled:bg-app-light-gray border-2 border-app-light-gray disabled:border-white hover:disabled:text-white">
-                  <i class="fa-solid fa-play"></i>
+                  <i class="fa-solid fa-stop"></i>
   
                   Stop
                 </button>
