--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
 
   <body data-controller="main">
-    <div class="flex h-screen select-none">
-      <div class="w-[300px] flex flex-col bg-app-dark-gray">
+    <div class="flex h-screen select-none bg-app-light-gray">
+      <div class="w-[300px] flex flex-col bg-app-dark-gray rounded-r-2xl z-10 shadow-sidebar">
         <div class="flex flex-col p-[25px]">
           <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 active">
             <i class="fa-solid fa-house"></i>
