Added montserrat font locally

--- a/public/splashscreen.html
+++ b/public/splashscreen.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../src/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../src/montserrat.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sikontrol</title>
     <script type="module" src="../src/main.ts" defer></script>
