--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 
   <body data-controller="main">
     <div class="flex h-screen select-none bg-app-light-gray">
-      <div class="w-[300px] flex flex-col bg-app-dark-gray rounded-r-2xl z-10 shadow-sidebar">
+      <div class="w-[120px] flex flex-col bg-app-dark-gray rounded-r-2xl z-10 shadow-sidebar">
         <div class="flex flex-col p-[25px]">
-          <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 active">
+          <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 active flex items-center justify-center">
             <i class="fa-solid fa-house"></i>
-            App
           </button>
         </div>
 
@@ -26,14 +25,12 @@
         </div>
 
         <div class="flex flex-col p-[25px]">
-          <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 nonactive mb-[25px]">
+          <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 nonactive mb-[25px] flex items-center justify-center">
             <i class="fa-solid fa-copyright"></i>
-            Credits
           </button>
 
-          <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 nonactive">
+          <button data-main-target="navbtn" data-action="click->main#changePage" class="font-montserrat font-bold text-[24px] h-[70px] rounded-lg hover:bg-white hover:text-app-dark-gray duration-150 nonactive flex items-center justify-center">
             <i class="fa-solid fa-gear"></i>
-            Settings
           </button>
         </div>
       </div>
